<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zangfengshun.musicapp.SearchActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:text="@string/description_search"
        android:textSize="@dimen/description_text_size" />

    <Button
        android:id="@+id/button_add_to_list"
        android:layout_width="128dp"
        android:layout_height="64dp"
        android:layout_centerInParent="true"
        android:text="@string/button_add_to_my_list" />

    <Button
        android:id="@+id/button_play_now"
        android:layout_width="128dp"
        android:layout_height="64dp"
        android:layout_below="@id/button_add_to_list"
        android:layout_centerHorizontal="true"
        android:layout_margin="24dp"
        android:text="@string/button_play_now" />
</RelativeLayout>
